--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "airtable": "^0.11.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
