--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "airtable": "0.11.4",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "sharp": "0.30.6"
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "@types/node": "17.0.22",
-    "@types/react": "18.0.12",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "autoprefixer": "10.4.7",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.0",
     "eslint-config-prettier": "8.5.0",
     "postcss": "8.4.14",
-    "prettier": "2.6.2",
-    "tailwindcss": "3.1.2",
-    "typescript": "4.7.3"
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.7.4"
   }
 }
