--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
     "es2021": true,
     "node": true
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "extends": [
     "eslint:recommended",
     "next",
@@ -20,5 +22,8 @@
   "globals": {
     "React": true,
     "JSX": true
-  }
+  },
+  "ignorePatterns": [
+    "*.js"
+  ]
 }
