--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@googleapis/youtube": "^6.0.0",
+    "@plaiceholder/next": "^2.4.0",
     "airtable": "0.11.4",
-    "next": "^12.2.0",
+    "next": "^12.2.2",
+    "plaiceholder": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "autoprefixer": "10.4.7",
     "eslint": "^8.19.0",
-    "eslint-config-next": "^12.2.0",
+    "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "8.5.0",
     "postcss": "8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.4",
+    "tailwindcss": "^3.1.5",
     "typescript": "^4.7.4"
   }
 }
