--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   },
   "dependencies": {
     "@googleapis/youtube": "^6.0.0",
-    "@plaiceholder/next": "^2.4.0",
+    "@headlessui/react": "^1.6.6",
     "airtable": "0.11.4",
     "next": "^12.2.2",
-    "plaiceholder": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.3.5",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.0.4",
     "@types/react": "^18.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "autoprefixer": "10.4.7",
     "eslint": "^8.19.0",
     "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "8.5.0",
     "postcss": "8.4.14",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.5",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
 }
