--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "@googleapis/youtube": "^6.0.0",
     "@headlessui/react": "^1.6.6",
     "airtable": "0.11.4",
-    "next": "^12.2.2",
+    "next": "^12.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-intersection-observer": "^9.3.5",
+    "react-intersection-observer": "^9.4.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "autoprefixer": "10.4.7",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "^12.2.2",
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.21.0",
+    "eslint-config-next": "^12.2.4",
     "eslint-config-prettier": "8.5.0",
-    "postcss": "8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
 }
