--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
   },
   "dependencies": {
     "@googleapis/youtube": "6.0.0",
-    "@headlessui/react": "1.7.2",
-    "airtable": "0.11.4",
-    "next": "12.3.1",
+    "@headlessui/react": "^1.7.3",
+    "airtable": "^0.11.5",
+    "next": "^13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.4.0",
+    "react-icons": "^4.6.0",
     "react-intersection-observer": "9.4.0",
-    "sharp": "0.31.0"
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.1",
-    "@types/react": "18.0.20",
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
-    "autoprefixer": "10.4.12",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "8.5.0",
-    "postcss": "8.4.16",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "tailwindcss": "3.2.1",
-    "typescript": "4.8.3"
+    "typescript": "^4.8.4"
   }
 }
