--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint src --fix && npm run format",
+    "lint:fix": "npm run format && eslint src --fix",
     "format": "prettier --write src",
     "type-check": "tsc"
   },
