--- a/package.json
+++ b/package.json
@@ -11,28 +11,28 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@googleapis/youtube": "8.0.0",
-    "@headlessui/react": "^1.7.3",
+    "@googleapis/youtube": "^8.0.0",
+    "@headlessui/react": "^1.7.4",
     "airtable": "^0.11.5",
-    "next": "^13.0.0",
+    "next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
-    "react-intersection-observer": "9.4.0",
-    "sharp": "^0.31.1"
+    "react-intersection-observer": "^9.4.1",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.26.0",
-    "eslint-config-next": "^13.0.0",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.3",
     "eslint-config-prettier": "8.5.0",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "prettier": "2.7.1",
-    "tailwindcss": "3.2.2",
-    "typescript": "^4.8.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3"
   }
 }
