--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@googleapis/youtube": "^8.0.0",
+    "@googleapis/youtube": "^9.0.0",
     "@headlessui/react": "^1.7.4",
     "@vercel/analytics": "^1.0.0",
-    "airtable": "^0.11.5",
-    "next": "^13.0.3",
+    "airtable": "^0.12.1",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "react-intersection-observer": "^9.4.1",
-    "sharp": "^0.31.2"
+    "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.4.3",
+    "sharp": "^0.32.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.27.0",
-    "eslint-config-next": "^13.0.3",
-    "eslint-config-prettier": "8.7.0",
-    "postcss": "^8.4.19",
-    "prettier": "2.8.4",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.4",
+    "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
