--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@googleapis/youtube": "^13.0.0",
     "@headlessui/react": "^1.7.4",
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/speed-insights": "^1.0.9",
     "airtable": "^0.12.1",
     "next": "^14.0.1",
     "react": "18.2.0",
