--- a/package.json
+++ b/package.json
@@ -14,30 +14,30 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@googleapis/youtube": "^13.1.0",
-    "@headlessui/react": "^1.7.4",
+    "@googleapis/youtube": "^16.1.0",
+    "@headlessui/react": "^2.0.3",
     "@vercel/speed-insights": "^1.0.10",
     "airtable": "^0.12.1",
     "next": "^14.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.8.0",
-    "sharp": "^0.33.0",
-    "swr": "^2.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
+    "sharp": "^0.33.3",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.11.18",
-    "@types/react": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
-    "autoprefixer": "^10.4.13",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.38",
     "prettier": "^3.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
