--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-config-next": "^15.2.2",
     "eslint-config-prettier": "^10.1.1",
